--- a/flyers.html
+++ b/flyers.html
@@ -42,17 +42,17 @@
     <section>
       <div class="flyer-grid">
         <!-- row 1 -->
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer1.jpg">
-          <img src="Pictures/Flyers/flyer1.jpg" alt="Flyer 1">
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 1.png">
+          <img src="Pictures/FLYER ART 1.png" alt="Flyer 1">
         </a>
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer2.jpg">
-          <img src="Pictures/Flyers/flyer2.jpg" alt="Flyer 2">
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 2.png">
+          <img src="Pictures/FLYER ART 2.png" alt="Flyer 2">
         </a>
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer3.jpg">
-          <img src="Pictures/Flyers/flyer3.jpg" alt="Flyer 3">
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 3.png">
+          <img src="Pictures/FLYER ART 3.png" alt="Flyer 3">
         </a>
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer4.jpg">
-          <img src="Pictures/Flyers/flyer4.jpg" alt="Flyer 4">
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 4.png">
+          <img src="Pictures/FLYER ART 4.png" alt="Flyer 4">
         </a>
         <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer5.jpg">
           <img src="Pictures/Flyers/flyer5.jpg" alt="Flyer 5">
