--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <p>© 2025 GUVGFX | Designed by Guvnor Nnanna</p>
 
     <div class="social-links">
-      <a href="https://instagram.com/YOUR_USERNAME" target="_blank" aria-label="Instagram">
+      <a href="https://www.instagram.com/guvgfx/" target="_blank" aria-label="Instagram">
         <!-- Instagram SVG -->
         <svg viewBox="0 0 24 24" class="icon">
           <path fill="currentColor" d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2c1.65 0 3 1.35 3 3v10c0 1.65-1.35 3-3 3H7c-1.65 0-3-1.35-3-3V7c0-1.65 1.35-3 3-3h10zm-5 3.5A4.5 4.5 0 1 0 16.5 12 4.505 4.505 0 0 0 12 7.5zm0 7.3A2.8 2.8 0 1 1 14.8 12 2.8 2.8 0 0 1 12 14.8zM17.3 6.7a1.3 1.3 0 1 1-1.3-1.3 1.3 1.3 0 0 1 1.3 1.3z"/>
