Add social media links to footers across multiple pages

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </svg>
       </a>
 
-      <a href="https://tiktok.com/@YOUR_USERNAME" target="_blank" aria-label="TikTok">
+      <a href="https://www.tiktok.com/@guvgfx?lang=en" target="_blank" aria-label="TikTok">
         <!-- TikTok SVG -->
         <svg viewBox="0 0 24 24" class="icon">
           <path fill="currentColor" d="M12.75 2h3.25c.09.79.31 1.53.66 2.23.59 1.21 1.61 2.2 2.87 2.75.64.27 1.33.4 2.04.41v3.26c-1.72-.06-3.42-.54-4.92-1.41v6.85a6.95 6.95 0 1 1-5.91-6.89v3.36a3.63 3.63 0 1 0 2.66 3.5V2z"/>
