--- a/about.html
+++ b/about.html
@@ -32,8 +32,24 @@
     <p>I'm a passionate graphic designer with experience in branding, digital art, and UI/UX design. My goal is to bring creativity and strategy together in every project I take on.</p>
   </section>
 
-  <footer>
-    <p>© 2025 My Portfolio</p>
+    <footer>
+    <p>© 2025 GUVGFX | Designed by Guvnor Nnanna</p>
+
+    <div class="social-links">
+      <a href="https://www.instagram.com/guvgfx/" target="_blank" aria-label="Instagram">
+        <!-- Instagram SVG -->
+        <svg viewBox="0 0 24 24" class="icon">
+          <path fill="currentColor" d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2c1.65 0 3 1.35 3 3v10c0 1.65-1.35 3-3 3H7c-1.65 0-3-1.35-3-3V7c0-1.65 1.35-3 3-3h10zm-5 3.5A4.5 4.5 0 1 0 16.5 12 4.505 4.505 0 0 0 12 7.5zm0 7.3A2.8 2.8 0 1 1 14.8 12 2.8 2.8 0 0 1 12 14.8zM17.3 6.7a1.3 1.3 0 1 1-1.3-1.3 1.3 1.3 0 0 1 1.3 1.3z"/>
+        </svg>
+      </a>
+
+      <a href="https://www.tiktok.com/@guvgfx?lang=en" target="_blank" aria-label="TikTok">
+        <!-- TikTok SVG -->
+        <svg viewBox="0 0 24 24" class="icon">
+          <path fill="currentColor" d="M12.75 2h3.25c.09.79.31 1.53.66 2.23.59 1.21 1.61 2.2 2.87 2.75.64.27 1.33.4 2.04.41v3.26c-1.72-.06-3.42-.54-4.92-1.41v6.85a6.95 6.95 0 1 1-5.91-6.89v3.36a3.63 3.63 0 1 0 2.66 3.5V2z"/>
+        </svg>
+      </a>
+    </div>
   </footer>
 </body>
 </html>
