Implement code changes to enhance functionality and improve performance

--- a/covers.html
+++ b/covers.html
@@ -75,6 +75,13 @@
         <a class="portfolio-item lightbox-trigger" href="#!" data-full="Pictures/COVER ART 10.png">
           <img src="Pictures/COVER ART 10.png" alt="Cover 10">
         </a>
+        </a>
+        <a class="portfolio-item lightbox-trigger" href="#!" data-full="Pictures/COVER ART 11.png">
+          <img src="Pictures/COVER ART 11.png" alt="Cover 11">
+        </a>
+        <a class="portfolio-item lightbox-trigger" href="#!" data-full="Pictures/COVER ART 12.png">
+          <img src="Pictures/COVER ART 12.png" alt="Cover 12">
+        </a>
       </div>
     </section>
 
@@ -100,6 +107,9 @@
         </a>
         <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 4.png">
           <img src="Pictures/FLYER ART 4.png" alt="Flyer 4">
+        </a>
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 4.png">
+          <img src="Pictures/FLYER ART 5.png" alt="Flyer 5">
         </a>
       <p class="center mt-2">
         <a class="btn-lg" href="contact.html">Book a Project</a>
