--- a/covers.html
+++ b/covers.html
@@ -96,24 +96,32 @@
     <section>
       <!-- 5-across flyer grid (uses the .flyer-grid you added) -->
       <div class="flyer-grid">
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 1.png">
-          <img src="Pictures/FLYER ART 1.png" alt="Flyer 1">
-        </a>
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 2.png">
-          <img src="Pictures/FLYER ART 2.png" alt="Flyer 2">
-        </a>
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 3.png">
-          <img src="Pictures/FLYER ART 3.png" alt="Flyer 3">
-        </a>
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 4.png">
-          <img src="Pictures/FLYER ART 4.png" alt="Flyer 4">
-        </a>
-        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 4.png">
-          <img src="Pictures/FLYER ART 5.png" alt="Flyer 5">
-        </a>
+
+      <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 1.png">
+        <img src="Pictures/FLYER ART 1.png" alt="Flyer 1">
+      </a>
+
+      <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 2.png">
+        <img src="Pictures/FLYER ART 2.png" alt="Flyer 2">
+      </a>
+
+      <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 3.png">
+        <img src="Pictures/FLYER ART 3.png" alt="Flyer 3">
+      </a>
+
+      <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 4.png">
+        <img src="Pictures/FLYER ART 4.png" alt="Flyer 4">
+      </a>
+
+      <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/FLYER ART 5.png">
+        <img src="Pictures/FLYER ART 5.png" alt="Flyer 5">
+      </a>
+
+      </div>
+
       <p class="center mt-2">
-        <a class="btn-lg" href="contact.html">Book a Project</a>
-      </p>
+      <a class="btn-lg" href="contact.html">Book a Project</a>
+    </p>
     </section>
   </main>
 
