--- a/about.html
+++ b/about.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png"> <!-- FavIcon-->
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png"> <!-- FavIcon-->
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png"> <!-- FavIcon-->
-  <link rel="manifest" href="favicon/site.webmanifest"> <!-- FavIcon-->
+  <title>About Me | GUVGFX</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="favicon/favicon-32x32.png" type="image/png" />
 </head>
+
 <body>
+
+  <!-- HEADER -->
   <header>
     <nav class="navbar">
       <h1 class="logo">
-        <a href="index.html">
-          <img src="Pictures/GUV marker.png" alt="Logo">
-        </a>
+        <a href="index.html"><img src="Pictures/GUV marker.png" alt="GUV Logo"></a>
       </h1>
-      <ul class="nav-links">
+
+      <div class="hamburger" id="hamburger">
+        <span></span><span></span><span></span>
+      </div>
+
+      <ul class="nav-links" id="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About</a></li>
         <li><a href="projects.html">Projects</a></li>
@@ -27,12 +30,86 @@
     </nav>
   </header>
 
-  <section class="content">
-    <h2>About Me</h2>
-    <p>I'm a passionate graphic designer with experience in branding, digital art, and UI/UX design. My goal is to bring creativity and strategy together in every project I take on.</p>
+  
+  <!-- ABOUT WRAPPER -->
+  <section class="about-wrapper container">
+
+    <!-- LEFT SIDE - IMAGE -->
+    <div class="about-image">
+      <img src="AboutMePics/IMG_8865.png" alt="Guvnor Photo">
+    </div>
+
+    <!-- RIGHT SIDE - TEXT -->
+    <div class="about-text">
+      <h2 class="section-title">About Me</h2>
+
+      <p>
+        I'm a passionate digital designer with experience in cover art, branding, and motion visual design.
+        I’ve worked with artists, creators, and brands to produce eye-catching visuals that elevate their message.
+        My goal is to bring creativity, quality, and strategy into every project I take on.
+      </p>
+
+      <p>
+        Outside of digital art, I also enjoy photography, video editing, and exploring new design techniques.
+        Thank you for taking the time to learn more about me — feel free to connect with me on social platforms below.
+      </p>
+
+      <!-- SOCIAL ICONS -->
+      <div class="about-socials">
+
+        <!-- INSTAGRAM -->
+        <a href="https://instagram.com" target="_blank" class="social-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" fill="#111" viewBox="0 0 24 24">
+            <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 
+              0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 
+              3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 
+              1.346-3 3-3zm5 2c-2.757 0-5 2.243-5 5s2.243 5 5 5 5-2.243 
+              5-5-2.243-5-5-5zm0 2c1.654 0 3 1.346 3 3s-1.346 3-3 
+              3-3-1.346-3-3 1.346-3 3-3zm4.5-.75a1.25 1.25 0 110 2.5 
+              1.25 1.25 0 010-2.5z"/>
+          </svg>
+        </a>
+
+        <!-- TIKTOK -->
+        <a href="https://tiktok.com" target="_blank" class="social-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" fill="#111" viewBox="0 0 24 24">
+            <path d="M12.74 2h3.01c.14 1.33.76 2.54 
+              1.73 3.44 1 .93 2.33 1.53 3.78 1.61v3.07c-1.65-.05-3.2-.57-4.53-1.43v6.98c0 
+              2.58-1.85 4.77-4.36 5.21a5.01 5.01 0 01-5.82-4.95c0-2.77 
+              2.25-5.02 5.02-5.02.35 0 .69.04 1.02.11v3.2c-.32-.1-.66-.15-1.02-.15a2.02 
+              2.02 0 100 4.04c1.12 0 2.02-.91 2.02-2.02V2z"/>
+          </svg>
+        </a>
+
+        <!-- YOUTUBE -->
+        <a href="https://youtube.com" target="_blank" class="social-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" fill="#111" viewBox="0 0 24 24">
+            <path d="M23.5 6.2a3 3 0 00-2.1-2.1C19.3 3.5 12 
+              3.5 12 3.5s-7.3 0-9.4.6A3 3 0 00.5 6.2 31 31 0 000 12a31 
+              31 0 00.5 5.8 3 3 0 002.1 2.1c2.1.6 9.4.6 9.4.6s7.3 
+              0 9.4-.6a3 3 0 002.1-2.1A31 31 0 0024 12a31 31 0 
+              00-.5-5.8zM9.75 15.02V8.98l5.75 3.02-5.75 3.02z"/>
+          </svg>
+        </a>
+
+        <!-- LINKEDIN -->
+        <a href="https://linkedin.com" target="_blank" class="social-icon">
+          <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" fill="#111" viewBox="0 0 24 24">
+            <path d="M4.98 3.5c0 1.38-1.12 2.5-2.5 
+              2.5S0 4.88 0 3.5 1.12 1 2.48 1a2.5 2.5 0 012.5 2.5zM.5 
+              8h4v13h-4V8zm7.5 0h3.8v1.8h.1c.5-.95 1.7-2 3.5-2 
+              3.8 0 4.5 2.5 4.5 5.8V21h-4v-6.7c0-1.6 0-3.7-2.3-3.7-2.3 
+              0-2.7 1.8-2.7 3.6V21h-4V8z"/>
+          </svg>
+        </a>
+      </div>
+
+    </div>
+
   </section>
 
-    <footer>
+  <!-- FOOTER -->
+  <footer>
     <p>© 2025 GUVGFX | Designed by Guvnor Nnanna</p>
 
     <div class="social-links">
@@ -51,5 +128,16 @@
       </a>
     </div>
   </footer>
+
+
+<script>
+  const hamburger = document.getElementById("hamburger");
+  const navLinks  = document.getElementById("nav-links");
+  hamburger.addEventListener("click", () => {
+    navLinks.classList.toggle("show");
+    hamburger.classList.toggle("open");
+  });
+</script>
+
 </body>
 </html>
