--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me | GUVGFX</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="favicon/favicon-32x32.png" type="image/png" />
+  <link rel="icon" href="favIcon/favicon-32x32.png" type="image/png" />
 </head>
 
 <body>
