--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | GUVGFX</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="favIcon/favicon-32x32.png" type="image/png" />
 </head>
 <body>
   <header>
