--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       <div class="about-socials">
 
         <!-- INSTAGRAM -->
-        <a href="https://instagram.com" target="_blank" class="social-icon">
+        <a href="https://www.instagram.com/guvgfx/" target="_blank" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" fill="#111" viewBox="0 0 24 24">
             <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 
               0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 
@@ -71,7 +71,7 @@
         </a>
 
         <!-- TIKTOK -->
-        <a href="https://tiktok.com" target="_blank" class="social-icon">
+        <a href="https://www.tiktok.com/@guvgfx?lang=en" target="_blank" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" fill="#111" viewBox="0 0 24 24">
             <path d="M12.74 2h3.01c.14 1.33.76 2.54 
               1.73 3.44 1 .93 2.33 1.53 3.78 1.61v3.07c-1.65-.05-3.2-.57-4.53-1.43v6.98c0 
@@ -93,7 +93,7 @@
         </a>
 
         <!-- LINKEDIN -->
-        <a href="https://linkedin.com" target="_blank" class="social-icon">
+        <a href="https://www.linkedin.com/in/guvnor-nnanna-91a412114/" target="_blank" class="social-icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" fill="#111" viewBox="0 0 24 24">
             <path d="M4.98 3.5c0 1.38-1.12 2.5-2.5 
               2.5S0 4.88 0 3.5 1.12 1 2.48 1a2.5 2.5 0 012.5 2.5zM.5 
